--- a/src/css/Web2.css
+++ b/src/css/Web2.css
@@ -25,4 +25,14 @@ p {
     text-align: center;
     font-style: italic;
     font-weight: 300;
+    margin-bottom: 50px;
+}
+
+#form_box {
+    border-radius: 5px;
+    background:#EEEEEE;
+    margin: 25px 5px;
+    padding: 25px;
+    font-size: 20px;
+    background-color: rgba(42, 42, 73, 0.9);
 }
