--- a/src/css/Web2.css
+++ b/src/css/Web2.css
@@ -17,7 +17,7 @@ body {
 h1 {
     font-size: 30px;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 p {
@@ -25,14 +25,49 @@ p {
     text-align: center;
     font-style: italic;
     font-weight: 300;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
+}
+
+b {
+    font-weight: 300;
 }
 
 #form_box {
     border-radius: 5px;
     background:#EEEEEE;
     margin: 25px 5px;
-    padding: 25px;
-    font-size: 20px;
+    padding: 45px 45px 60px 45px;
+    font-size: 18px;
     background-color: rgba(42, 42, 73, 0.9);
+    margin-left: 400px;
+    margin-right: 400px;
+}
+
+#text_box {
+    width: 100%;
+    height: 38px;
+    border-radius: 5px;
+}
+
+#select_box {
+    width: 101%;
+    height: 38px;
+    border-radius: 5px;
+}
+
+#textarea {
+    width: 100%;
+    height: 110px;
+}
+
+#text {
+    margin-bottom: 50px;
+}
+
+button {
+    color: white;
+    width: 101%;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #37AF65;
 }
