--- a/src/css/Web2.css
+++ b/src/css/Web2.css
@@ -47,17 +47,25 @@ b {
     width: 100%;
     height: 38px;
     border-radius: 5px;
+    padding-left: .8em;
+    margin-top: 8px;
 }
 
 #select_box {
     width: 101%;
     height: 38px;
     border-radius: 5px;
+    padding-left: .7em;
+    margin-top: 8px;
 }
 
 #textarea {
     width: 100%;
     height: 110px;
+    padding-left: .8em;
+    padding-top: .6em;
+    margin-top: 8px;
+    font-weight: bold;
 }
 
 #text {
@@ -70,4 +78,8 @@ button {
     height: 50px;
     border-radius: 5px;
     background-color: #37AF65;
+}
+
+#option {
+    font-size: 15px;
 }
